--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/reset.css" />
     <link rel="stylesheet" href="./styles/style.css" />
-    <title>Document</title>
+    <title>Nude</title>
   </head>
   <body>
     <header>
@@ -20,15 +20,17 @@
       <div class="header-wrapper">
         <div class="container">
           <div class="header">
-            <img src="./assets/images/logo.svg" alt="" />
-            <div class="menu">
-              <ul>
-                <li><a href="">Lifetime ISA</a></li>
-                <li><a href="">Blog</a></li>
-                <li><a href="">Pact</a></li>
-                <li><a href="">Purpose</a></li>
-              </ul>
+            <div class="logo">
+              <img src="./assets/images/logo.svg" alt="" />
             </div>
+            <nav class="menu header__menu">
+              <ul>
+                <li><a href="#">Lifetime ISA</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Pact</a></li>
+                <li><a href="#">Purpose</a></li>
+              </ul>
+            </nav>
           </div>
         </div>
       </div>
@@ -57,9 +59,9 @@
                 </p>
               </div>
               <div class="banner__apps apps">
-                <a href="">
+                <a href="https://www.apple.com/app-store">
                   <img src="./assets/images/appstore.png" alt="" /> </a
-                ><a href="">
+                ><a href="https://play.google.com">
                   <img src="./assets/images/googlestore.png" alt=""
                 /></a>
               </div>
@@ -82,14 +84,15 @@
           </div>
         </div>
       </div>
-
       <div class="about-wrapper">
         <div class="strip"><img src="./assets/images/strip.png" alt="" /></div>
         <div class="container">
           <div class="about">
             <div class="advantages">
               <div class="advantages__card">
-                <img src="./assets/images/group1.png" alt="" />
+                <div class="advantages__card__image">
+                  <img src="./assets/images/group1.png" alt="" />
+                </div>
                 <div class="advantages__card__text">
                   <h4>The real deal</h4>
                   <p>
@@ -99,7 +102,9 @@
                 </div>
               </div>
               <div class="advantages__card">
-                <img src="./assets/images/group2.png" alt="" />
+                <div class="advantages__card__image">
+                  <img src="./assets/images/group2.png" alt="" />
+                </div>
                 <div class="advantages__card__text">
                   <h4>Your money, covered</h4>
                   <p>
@@ -109,7 +114,9 @@
                 </div>
               </div>
               <div class="advantages__card">
-                <img src="./assets/images/group3.png" alt="" />
+                <div class="advantages__card__image">
+                  <img src="./assets/images/group3.png" alt="" />
+                </div>
                 <div class="advantages__card__text">
                   <h4>Safe as houses</h4>
                   <p>
@@ -128,7 +135,6 @@
                 <div class="service__image">
                   <img src="./assets/images/mobile2.png" alt="" />
                 </div>
-
                 <div class="service__text">
                   <h3>Find out how much you need</h3>
                   <p>
@@ -188,9 +194,9 @@
                 place.
               </p>
               <div class="apps">
-                <a href="">
+                <a href="https://www.apple.com/app-store/">
                   <img src="./assets/images/appstore.png" alt="" /> </a
-                ><a href="">
+                ><a href="https://play.google.com">
                   <img src="./assets/images/googlestore.png" alt=""
                 /></a>
               </div>
@@ -201,7 +207,6 @@
           <img src="./assets/images/stripbig.png" alt="" />
         </div>
       </div>
-
       <div class="accounts">
         <div class="accounts__headline">
           <div class="container">
@@ -209,7 +214,6 @@
             <h4>Accounts for first-time home buyers</h4>
           </div>
         </div>
-
         <div class="accounts__options-wrapper">
           <div class="strip_light">
             <img src="./assets/images/Subtract.png" alt="" />
@@ -264,50 +268,47 @@
               </p>
               <button>Find out more</button>
             </div>
-
             <div class="footer__menu">
               <h5>About</h5>
               <ul>
-                <li><a href="">Our pact</a></li>
-                <li><a href="">Our purpose</a></li>
-                <li><a href="">Help</a></li>
-                <li><a href="">Team</a></li>
-                <li><a href="">Careers</a></li>
+                <li><a href="#">Our pact</a></li>
+                <li><a href="#">Our purpose</a></li>
+                <li><a href="#">Help</a></li>
+                <li><a href="#">Team</a></li>
+                <li><a href="#">Careers</a></li>
               </ul>
             </div>
             <div class="footer__menu">
               <h5>Legal</h5>
               <ul>
-                <li><a href="">Cookie policy</a></li>
-                <li><a href="">Privacy policy</a></li>
-                <li><a href="">Terms of use</a></li>
-                <li><a href="">Legal documents</a></li>
+                <li><a href="#">Cookie policy</a></li>
+                <li><a href="#">Privacy policy</a></li>
+                <li><a href="#">Terms of use</a></li>
+                <li><a href="#">Legal documents</a></li>
               </ul>
             </div>
             <div class="footer__menu">
               <h5>Drops</h5>
               <ul>
                 <li>
-                  <a href="">Time to buy calculator £10,000 giveaway</a>
+                  <a href="#">Time to buy calculator £10,000 giveaway</a>
                 </li>
               </ul>
             </div>
             <div class="footer__menu">
               <h5>Connect</h5>
               <ul>
-                <li><a href="">Adultish</a></li>
+                <li><a href="#">Adultish</a></li>
                 <li><a href="https://www.instagram.com/">Instagram</a></li>
               </ul>
             </div>
           </div>
         </div>
       </div>
-
       <address>
         <div class="line"></div>
         <div class="container">
           <p>Copyright © Nude Finance Limited - 2022. All rights reserved.</p>
-
           <p>
             Nude is a trading name of Nude Finance Limited, which is authorised
             and regulated by the Financial Conduct Authority (FRN: 928010) and
